ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: macy-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: macy-service
            port:
              number: 80
